terminamos el index en branch

--- a/index.html
+++ b/index.html
@@ -80,10 +80,11 @@
     </section>
     
     <div class="row">
-      <div class="col-lg-12 col-xs-12">
+      <div class="col-lg-12 col-xs-12 newsletter">
         <h3 class="display-6"> Suscribete a nuestro Newsletter</h3>
         <form action="#">
           <input type="text" placeholder="EMAIL" >
+          <button type="button" class="btn btn-dark">Suscribirse</button>
         </form>
       </div>
     </div>
@@ -149,18 +150,6 @@
       </div>
     </div>
   </footer>
-   
-
-
-    
-  
-
-
-
-
-
-
-
 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
