--- a/pages/camisas.html
+++ b/pages/camisas.html
@@ -18,7 +18,7 @@
   <header class="container-fluid">
     <div class="row">
       <div class="col-lg-9">
-        <h1><a href="#">Mercer</h1></a> 
+        <h1><a href="../index.html">Mercer</h1></a> 
       </div>
         <nav class="navbar navbar-light bg-light col-lg-3 index">
           <form class="form-inline">
@@ -31,11 +31,11 @@
 </header>
 
 <nav class="container-fluid nav nav-pills flex-column flex-sm-row pages">
-<a class="flex-sm-fill text-sm-center nav-link" href="#">Home</a>
-<a class="flex-sm-fill text-sm-center nav-link" href="/pages/camisas.html">Camisas</a>
-<a class="flex-sm-fill text-sm-center nav-link" href="/pages/compraropa.html">Último modelo</a>
-<a class="flex-sm-fill text-sm-center nav-link" href="/pages/registro.html">Iniciar Sesión</a>
-<a class="flex-sm-fill text-sm-center nav-link" href="/pages/ayuda.html">Ayuda</a>
+<a class="flex-sm-fill text-sm-center nav-link" href="../index.html">Home</a>
+<a class="flex-sm-fill text-sm-center nav-link" href="#">Camisas</a>
+<a class="flex-sm-fill text-sm-center nav-link" href="compraropa.html">Último modelo</a>
+<a class="flex-sm-fill text-sm-center nav-link" href="registro.html">Iniciar Sesión</a>
+<a class="flex-sm-fill text-sm-center nav-link" href="ayuda.html">Ayuda</a>
 </nav>
         
         <div class="row">
@@ -106,13 +106,13 @@
       <!-- CONTENEDOR 1 -->
       <div class="col-lg-2">
         <ul>
-          <li><a href="/pages/ayuda.html">Ayuda</a></li>
+          <li><a href="ayuda.html">Ayuda</a></li>
           <li><a href="#">Pago</a></li>
           <li><a href="#">Envío</a></li>
           <li><a href="#">Cambios y Devoluciones</a></li>
           <li><a href="#">Tiendas y Empresa</a></li>
           <li><a href="#">Recogida de ropa</a></li>
-          <li><a href="/pages/registro.html">Mi cuenta</a></li>
+          <li><a href="registro.html">Mi cuenta</a></li>
         </ul>
       </div>
       <!-- CONTENEDOR 2 -->
@@ -127,7 +127,7 @@
       </div>
       <!-- CONTENEDOR 3 -->
       <div class="col-lg-2">
-        <ul>
+        <ul> 
           <li><a href="#">Empresa</a></li>
           <li><a href="#">Quiénes somos</a></li>
           <li><a href="#">Oficinas</a></li>
