--- a/pages/compraropa.html
+++ b/pages/compraropa.html
@@ -16,7 +16,7 @@
   <header class="container-fluid">
     <div class="row">
       <div class="col-lg-9">
-        <h1><a href="#">Mercer</h1></a> 
+        <h1><a href="../index.html">Mercer</h1></a> 
       </div>
         <nav class="navbar navbar-light bg-light col-lg-3 index">
           <form class="form-inline">
@@ -29,11 +29,11 @@
 </header>
 
 <nav class="container-fluid nav nav-pills flex-column flex-sm-row pages">
-<a class="flex-sm-fill text-sm-center nav-link" href="#">Home</a>
-<a class="flex-sm-fill text-sm-center nav-link" href="/pages/camisas.html">Camisas</a>
-<a class="flex-sm-fill text-sm-center nav-link" href="/pages/compraropa.html">Último modelo</a>
-<a class="flex-sm-fill text-sm-center nav-link" href="/pages/registro.html">Iniciar Sesión</a>
-<a class="flex-sm-fill text-sm-center nav-link" href="/pages/ayuda.html">Ayuda</a>
+<a class="flex-sm-fill text-sm-center nav-link" href="../index.html">Home</a>
+<a class="flex-sm-fill text-sm-center nav-link" href="camisas.html">Camisas</a>
+<a class="flex-sm-fill text-sm-center nav-link" href="#">Último modelo</a>
+<a class="flex-sm-fill text-sm-center nav-link" href="registro.html">Iniciar Sesión</a>
+<a class="flex-sm-fill text-sm-center nav-link" href="ayuda.html">Ayuda</a>
 </nav>
 
 
@@ -41,7 +41,7 @@
             <div class="col">
                 <h4 class="display-4">CAMISA OXFORD</h4>
                 <hr>
-                    <p class="lead col-12 text-justify small">
+                    <p class="lead col-12 text-justify">
                     CAMISA RELAXED FIT DE CUELLO SOLAPA CON BOTONES Y MANGA LARGA ACABADA EN PUÑO. BOLSILLO PLASTRÓN EN PECHO. CIERRE FRONTAL DE BOTONADURA.
                     </p>
             </div>
@@ -78,13 +78,13 @@
         </div>
         <div class="row">
             <div class="col">
-            <aside class="text-justify-center p-4 m-2"><small>MATERIALES, CUIDADOS Y ORIGEN
+            <aside class="text-justify-center p-3 m-2">MATERIALES, CUIDADOS Y ORIGEN
             MATERIALES
             Trabajamos con programas de seguimiento para garantizar el cumplimiento de los estándares de seguridad, salud y calidad de nuestros productos. 
             
             El estándar Green to Wear 2.0 tiene como objetivo minimizar el impacto ambiental de la producción textil. Para ello hemos desarrollado el programa The List de Inditex que nos ayuda a garantizar tanto la limpieza de los procesos productivos como la seguridad y salud de nuestras prendas. 
             EXTERIOR
-            100% algodón</small>
+            100% algodón</>
             </aside>
             </div>
         </div>
@@ -121,7 +121,7 @@
             <br>
             -No usar secadora.
         </div>
-        <div class="modal-footer">
+        <div class="modal-footer d-flex justify-content-center ">
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
             <button type="button" class="btn btn-primary">Añadir al Carrito <strong>$4.490ARS</strong></button>
         </div>
@@ -161,13 +161,13 @@
           <!-- CONTENEDOR 1 -->
           <div class="col-lg-2">
             <ul>
-              <li><a href="/pages/ayuda.html">Ayuda</a></li>
+              <li><a href="ayuda.html">Ayuda</a></li>
               <li><a href="#">Pago</a></li>
               <li><a href="#">Envío</a></li>
               <li><a href="#">Cambios y Devoluciones</a></li>
               <li><a href="#">Tiendas y Empresa</a></li>
               <li><a href="#">Recogida de ropa</a></li>
-              <li><a href="/pages/registro.html">Mi cuenta</a></li>
+              <li><a href="registro.html">Mi cuenta</a></li>
             </ul>
           </div>
           <!-- CONTENEDOR 2 -->
