--- a/pages/registro.html
+++ b/pages/registro.html
@@ -13,69 +13,46 @@
     <link rel="stylesheet" href="../css/estilo.css">
 </head>
 <body>
-    <div class="container overflow-hidden">
-        <div class="row my-2">
-          <div class="col-xl-12 col-xs-12">
-            <h1 class="display-1 m-0"><a class="text-reset font-weight-bold" href="../index.html">MERCER</a></h1>
-          </div>
-        </div>
-        <div class="d-inline-flex p-2 badge-light"><div class="input-group d-flex align-items-end justify-content-end align-content-end col-12">
-          <input type="text" class="form-control" placeholder="Buscar" aria-label="Recipient's username with two button addons" aria-describedby="button-addon4">
-          <div class="input-group-append" id="button-addon4">
-            <button class="btn btn-outline-secondary" type="button">Buscar</button>
-            <button class="btn btn-outline-secondary" type="button">Tu Carrito (0)</button></div>
-          </div>
-        </div>
-        <hr>
-        <div class="row">
-          <div class="col-xl-12 col-xs-12">
-              <nav class="navbar navbar-expand-lg navbar-light bg-light align-self-center border__nav">
-                  <a class="navbar-brand" href="#">Buscador</a>
-                  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                      <span class="navbar-toggler-icon"></span>
-                  </button>
-                  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                      <ul class="navbar-nav mr-auto">
-                      <li class="nav-item active">
-                          <a class="nav-link" href="../index.html">Home <span class="sr-only">(current)</span></a>
-                      </li>
-                      <li class="nav-item">
-                          <a class="nav-link" href="#">Iniciar Sesión</a>
-                      </li>
-                      <li class="nav-item dropdown">
-                          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                          Camisas
-                          </a>
-                          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                          <a class="dropdown-item" href="compraropa.html">New Collection</a>
-                          <a class="dropdown-item" href="camisas.html">Camisas</a>
-                          </div>
-                      </li>
-                      <li class="nav-item">
-                          <a class="nav-link" href="ayuda.html">Ayuda</a>
-                      </li>
-                      </ul>
-                  </div>
-                  </nav>
-          </div>
-      </div>  
-        <div class="row">
-            <div class="col">
-            <div class="d-flex justify-content-between animation">
-            <div>
-                <p class="lead">INICIA SESIÓN</p>
-                    <form action="#" method="POST" name="E-MAIL">
-                    <input class="col-8" type="text" placeholder="E-MAIL"><br>
-                    <input class="col-8" type="text" placeholder="Contraseña">
-                    </form>
-                    <br>
-                        <a class="text-reset font-weight-bold"href="ayuda.html">¿Olvidaste tu Contraseña?</a>
-                        <br>
-                        <br>
-                        <button class="col-8">INICIA SESIÓN</button>
-                </div>
-                <div class="registro">
-                    <p class="lead">REGÍSTRATE</p>
+  <header class="container-fluid">
+    <div class="row">
+      <div class="col-lg-9">
+        <h1><a href="../index.html">Mercer</h1></a> 
+      </div>
+        <nav class="navbar navbar-light bg-light col-lg-3 index">
+          <form class="form-inline">
+            <input class="form-control" type="search" placeholder="Buscar" aria-label="Buscar">
+            <button class="btn btn-outline-dark" type="submit">Buscar</button>
+            <button class="btn btn-outline-dark" type="submit">Carrito</button>
+          </form>
+        </nav>
+    </div>
+</header>
+
+<nav class="container-fluid nav nav-pills flex-column flex-sm-row pages">
+<a class="flex-sm-fill text-sm-center nav-link" href="../index.html">Home</a>
+<a class="flex-sm-fill text-sm-center nav-link" href="camisas.html">Camisas</a>
+<a class="flex-sm-fill text-sm-center nav-link" href="compraropa.html">Último modelo</a>
+<a class="flex-sm-fill text-sm-center nav-link" href="#">Iniciar Sesión</a>
+<a class="flex-sm-fill text-sm-center nav-link" href="ayuda.html">Ayuda</a>
+</nav>
+
+<div class="container-fluid registro">
+<div class="row">
+    <div class="col-6">
+      <h5>INICIA SESIÓN</h5>
+      <form action="#" method="POST" name="E-MAIL">
+      <input class="col-8" type="text" placeholder="E-MAIL"><br>
+      <input class="col-8" type="text" placeholder="Contraseña">
+      </form>
+      <br>     
+          <button class="col-8">INICIA SESIÓN</button> 
+          <br>
+          <br>
+          <a class="text-reset font-weight-bold" href="ayuda.html">  ¿Olvidaste tu Contraseña?</a>
+    </div>
+
+<div class="col-6">
+                    <h5>REGÍSTRATE</h5>
                     <small>SÍ AUN NO TIENES UNA CUENTA CREADA EN MERCER.COM.AR
                     UTILIZA ESTE ENLACE PARA COMPLETAR EL FORMULARIO DE REGISTRO.
                     SOLICITAREMOS INFORMACIÓN IMPRESCINDIBLE PARA AGILIZAR 
@@ -87,67 +64,55 @@
                 </div>  
             </div>
         </div>
+      </div>
+
+        <hr>
+        <footer>
+        <div class="row">
+          <!-- CONTENEDOR 1 -->
+          <div class="col-lg-2">
+            <ul>
+              <li><a href="ayuda.html">Ayuda</a></li>
+              <li><a href="#">Pago</a></li>
+              <li><a href="#">Envío</a></li>
+              <li><a href="#">Cambios y Devoluciones</a></li>
+              <li><a href="#">Tiendas y Empresa</a></li>
+              <li><a href="#">Recogida de ropa</a></li>
+              <li><a href="#">Mi cuenta</a></li>
+            </ul>
+          </div>
+          <!-- CONTENEDOR 2 -->
+          <div class="col-lg-2">
+            <ul>
+              <li><a href="https://www.instagram.com/?hl=es">Instagram</a></li>
+              <li><a href="https://es-la.facebook.com/">Facebook</a></li>
+              <li><a href="https://twitter.com/?lang=es">Twitter</a></li>
+              <li><a href="https://ar.pinterest.com/">Pinterest</a></li>
+              <li><a href="https://www.youtube.com/">YouTube</a></li>
+            </ul>
+          </div>
+          <!-- CONTENEDOR 3 -->
+          <div class="col-lg-2">
+            <ul>
+              <li><a href="#">Empresa</a></li>
+              <li><a href="#">Quiénes somos</a></li>
+              <li><a href="#">Oficinas</a></li>
+              <li><a href="#">Tiendas</a></li>
+              <li><a href="#">Trabaja con Nosotros</a></li>
+            </ul>
+          </div>
+          <!-- CONTENEDOR 4 -->
+          <div class="col-lg-2">
+            <ul>
+              <li><a href="#">Políticas</a></li>
+              <li><a href="#">Políticas de Privacidad</a></li>
+              <li><a href="#">Condiciones de Compra</a></li>
+              <li><a href="#">Configuraciones de Cookies</a></li>
+              <li><a href="#">Botón de Arrepentimiento</a></li>
+            </ul>
+          </div>
         </div>
-            <div class="row">
-                <div class="col-lg-12">   
-              <footer class="footer">
-              <!-- CIERRE DE REDES -->
-              <hr>
-              <!-- Div  FOOTER -->
-              <div class="row small ">
-                <!-- CONTENEDOR 1 --> 
-                <div class="d-flex flex-row justify-content-around col-lg-12 col-xs-12">              
-                <div>
-                    <li><a class="text-reset font-weight-bold" href="pages/ayuda.html">Ayuda</a></li>
-                    <li><a class="text-reset font-weight-bold" href="#">Pago</a></li>
-                    <li><a class="text-reset font-weight-bold"  href="#">Envío</a></li>
-                    <li><a class="text-reset font-weight-bold"  href="#">Cambios y Devoluciones</a></li>
-                    <li><a class="text-reset font-weight-bold"  href="#">Tiendas y Empresa</a></li>
-                    <li><a class="text-reset font-weight-bold"  href="#">Recogida de ropa</a></li>
-                    <li><a class="text-reset font-weight-bold" href="/pages/registro.html">Mi cuenta</a></li>
-                  </ul>
-                </div>
-                <!-- CONTENEDOR 2 -->
-                <div>
-                  <ul>
-                    <li><a class="text-reset font-weight-bold"  href="https://www.instagram.com/?hl=es">Instagram</a></li>
-                    <li><a class="text-reset font-weight-bold"  href="https://es-la.facebook.com/">Facebook</a></li>
-                    <li><a class="text-reset font-weight-bold"  href="https://twitter.com/?lang=es">Twitter</a></li>
-                    <li><a class="text-reset font-weight-bold"  href="https://ar.pinterest.com/">Pinterest</a></li>
-                    <li><a class="text-reset font-weight-bold"  href="https://www.youtube.com/">YouTube</a></li>
-                  </ul>
-                </div>
-                <!-- CONTENEDOR 3 -->
-                <div>
-                  <ul>
-                    <li><a class="text-reset font-weight-bold"  href="#">Empresa</a></li>
-                    <li><a class="text-reset font-weight-bold"  href="#">Quiénes somos</a></li>
-                    <li><a class="text-reset font-weight-bold"  href="#">Oficinas</a></li>
-                    <li><a class="text-reset font-weight-bold" href="#">Tiendas</a></li>
-                    <li><a class="text-reset font-weight-bold" href="#">Trabaja con Nosotros</a></li>
-                  </ul>
-                </div>
-                <!-- CONTENEDOR 4 -->
-                <div>
-                  <ul>
-                    <li><a class="text-reset font-weight-bold"  href="#">Políticas</a></li>
-                    <li><a class="text-reset font-weight-bold"  href="#">Políticas de Privacidad</a></li>
-                    <li><a class="text-reset font-weight-bold"  href="#">Condiciones de Compra</a></li>
-                    <li><a class="text-reset font-weight-bold" href="#">Configuraciones de Cookies</a></li>
-                    <li><a class="text-reset font-weight-bold"  href="#">Botón de Arrepentimiento</a></li>
-                  </ul>
-                </div>
-              </div> 
-              </div>
-              <!-- CIERRE DIV PADRE FOOTER -->
-              </footer>
-            </div>
-          </div>
-              <!-- CIERRE DE FOOTER -->
-            </div>
-          </div>
-          </div>
-          </div>
+      </footer>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
 </body>
