--- a/pages/camisas.html
+++ b/pages/camisas.html
@@ -118,11 +118,11 @@
       <!-- CONTENEDOR 2 -->
       <div class="col-lg-2">
         <ul>
-          <li><a href="https://www.instagram.com/?hl=es">Instagram</a></li>
-          <li><a href="https://es-la.facebook.com/">Facebook</a></li>
-          <li><a href="https://twitter.com/?lang=es">Twitter</a></li>
-          <li><a href="https://ar.pinterest.com/">Pinterest</a></li>
-          <li><a href="https://www.youtube.com/">YouTube</a></li>
+          <li class="li-hover"><a href="https://www.instagram.com/?hl=es">Instagram</a></li>
+          <li class="li-hover"><a href="https://es-la.facebook.com/">Facebook</a></li>
+          <li class="li-hover"><a href="https://twitter.com/?lang=es">Twitter</a></li>
+          <li class="li-hover"><a href="https://ar.pinterest.com/">Pinterest</a></li>
+          <li class="li-hover"><a href="https://www.youtube.com/">YouTube</a></li>
         </ul>
       </div>
       <!-- CONTENEDOR 3 -->
