--- a/pages/compraropa.html
+++ b/pages/compraropa.html
@@ -55,6 +55,7 @@
                 </div>
             </div>
         </div>
+        <br>
         <div class="row">
             <div class="col">
                 <div class="d-flex justify-content-around">
@@ -113,7 +114,7 @@
             <br>
             -Lavar a máquina max. 40ºC centrifugado corto.
             <br>
-            -No usar lejía / blanqueador.
+            -No usar lejía / blanqueador. class="li-hover"
             <br>
             -Planchar máximo 150 º C.
             <br>
@@ -146,11 +147,11 @@
         <div class="container-fluid">
           <div class="row">
             <div class="col-xl-12 col-xs-12 d-flex flex-row justify-content-around align-content-center redes">
-            <li><a href="https://www.instagram.com/?hl=es">INSTAGRAM</li></a>
-            <li><a href="https://es-la.facebook.com/">FACEBOOK</li></a>
-            <li><a href="https://twitter.com/?lang=es">TWITTER</li></a>
-            <li><a href="https://ar.pinterest.com/">PINTEREST</li></a>
-            <li><a href="https://www.youtube.com/">YOUTUBE</li></a>
+            <li class="li-hover"><a href="https://www.instagram.com/?hl=es">INSTAGRAM</li></a>
+            <li class="li-hover"><a href="https://es-la.facebook.com/">FACEBOOK</li></a>
+            <li class="li-hover"><a href="https://twitter.com/?lang=es">TWITTER</li></a>
+            <li class="li-hover"><a href="https://ar.pinterest.com/">PINTEREST</li></a>
+            <li class="li-hover"><a href="https://www.youtube.com/">YOUTUBE</li></a>
             </div>
           </div>
         </div>   
