finalizamos scss y comenzamos vista mobile

--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
     </header>
     
 <nav class="container-fluid nav nav-pills d-flex justify-content-around flex-column flex-sm-row pages">
-  <li><a class="flex-sm-fill text-sm-center nav-link" href="#">Home</a></li>
-  <li><a class="flex-sm-fill text-sm-center nav-link" href="/pages/camisas.html">Camisas</a></li>
-  <li><a class="flex-sm-fill text-sm-center nav-link" href="/pages/compraropa.html">Último modelo</a></li>
-  <li><a class="flex-sm-fill text-sm-center nav-link" href="/pages/registro.html">Iniciar Sesión</a></li>
-  <li><a class="flex-sm-fill text-sm-center nav-link" href="/pages/ayuda.html">Ayuda</a></li>
+  <li><a class="flex-sm-fill text-sm-center nav-link text-reset" href="#">Home</a></li>
+  <li><a class="flex-sm-fill text-sm-center nav-link text-reset" href="/pages/camisas.html">Camisas</a></li>
+  <li><a class="flex-sm-fill text-sm-center nav-link text-reset" href="/pages/compraropa.html">Último modelo</a></l>
+  <li><a class="flex-sm-fill text-sm-center nav-link text-reset" href="/pages/registro.html">Iniciar Sesión</a></li>
+  <li><a class="flex-sm-fill text-sm-center nav-link text-reset" href="/pages/ayuda.html">Ayuda</a></li>
 </nav>
 
 
