--- a/pages/ayuda.html
+++ b/pages/ayuda.html
@@ -16,7 +16,7 @@
   <header class="container-fluid">
     <div class="row">
       <div class="col-lg-9">
-        <h1><a href="../index.html">Mercer</h1></a> 
+        <h1><a class="text-reset class="text-reset"" href="../index.html">Mercer</h1></a> 
       </div>
         <nav class="navbar navbar-light bg-light col-lg-3 index">
           <form class="form-inline">
@@ -29,11 +29,11 @@
 </header>
 
 <nav class="container-fluid nav nav-pills flex-column flex-sm-row pages">
-<a class="flex-sm-fill text-sm-center nav-link" href="../index.html">Home</a>
-<a class="flex-sm-fill text-sm-center nav-link" href="camisas.html">Camisas</a>
-<a class="flex-sm-fill text-sm-center nav-link" href="compraropa.html">Último modelo</a>
-<a class="flex-sm-fill text-sm-center nav-link" href="registro.html">Iniciar Sesión</a>
-<a class="flex-sm-fill text-sm-center nav-link" href="#">Ayuda</a>
+<a class="flex-sm-fill text-sm-center nav-link text-reset" href="../index.html">Home</a>
+<a class="flex-sm-fill text-sm-center nav-link text-reset" href="camisas.html">Camisas</a>
+<a class="flex-sm-fill text-sm-center nav-link text-reset" href="compraropa.html">Último modelo</a>
+<a class="flex-sm-fill text-sm-center nav-link text-reset" href="registro.html">Iniciar Sesión</a>
+<a class="flex-sm-fill text-sm-center nav-link text-reset" href="#">Ayuda</a>
 </nav>
 
   <div class="ayuda">
@@ -59,43 +59,43 @@
       <!-- CONTENEDOR 1 -->
       <div class="col-lg-2">
         <ul>
-          <li><a href="#">Ayuda</a></li>
-          <li><a href="#">Pago</a></li>
-          <li><a href="#">Envío</a></li>
-          <li><a href="#">Cambios y Devoluciones</a></li>
-          <li><a href="#">Tiendas y Empresa</a></li>
-          <li><a href="#">Recogida de ropa</a></li>
-          <li><a href="registro.html">Mi cuenta</a></li>
+          <li><a class="text-reset" href="#">Ayuda</a></li>
+          <li><a class="text-reset" href="#">Pago</a></li>
+          <li><a class="text-reset" href="#">Envío</a></li>
+          <li><a class="text-reset" href="#">Cambios y Devoluciones</a></li>
+          <li><a class="text-reset" href="#">Tiendas y Empresa</a></li>
+          <li><a class="text-reset" href="#">Recogida de ropa</a></li>
+          <li><a class="text-reset" href="registro.html">Mi cuenta</a></li>
         </ul>
       </div>
       <!-- CONTENEDOR 2 -->
       <div class="col-lg-2">
         <ul>
-          <li><a href="https://www.instagram.com/?hl=es">Instagram</a></li>
-          <li><a href="https://es-la.facebook.com/">Facebook</a></li>
-          <li><a href="https://twitter.com/?lang=es">Twitter</a></li>
-          <li><a href="https://ar.pinterest.com/">Pinterest</a></li>
-          <li><a href="https://www.youtube.com/">YouTube</a></li>
+          <li><a class="text-reset" href="https://www.instagram.com/?hl=es">Instagram</a></li>
+          <li><a class="text-reset" href="https://es-la.facebook.com/">Facebook</a></li>
+          <li><a class="text-reset" href="https://twitter.com/?lang=es">Twitter</a></li>
+          <li><a class="text-reset" href="https://ar.pinterest.com/">Pinterest</a></li>
+          <li><a class="text-reset" href="https://www.youtube.com/">YouTube</a></li>
         </ul>
       </div>
       <!-- CONTENEDOR 3 -->
       <div class="col-lg-2">
         <ul>
-          <li><a href="#">Empresa</a></li>
-          <li><a href="#">Quiénes somos</a></li>
-          <li><a href="#">Oficinas</a></li>
-          <li><a href="#">Tiendas</a></li>
-          <li><a href="#">Trabaja con Nosotros</a></li>
+          <li><a class="text-reset" href="#">Empresa</a></li>
+          <li><a class="text-reset" href="#">Quiénes somos</a></li>
+          <li><a class="text-reset" href="#">Oficinas</a></li>
+          <li><a class="text-reset" href="#">Tiendas</a></li>
+          <li><a class="text-reset" href="#">Trabaja con Nosotros</a></li>
         </ul>
       </div>
       <!-- CONTENEDOR 4 -->
       <div class="col-lg-2">
         <ul>
-          <li><a href="#">Políticas</a></li>
-          <li><a href="#">Políticas de Privacidad</a></li>
-          <li><a href="#">Condiciones de Compra</a></li>
-          <li><a href="#">Configuraciones de Cookies</a></li>
-          <li><a href="#">Botón de Arrepentimiento</a></li>
+          <li><a class="text-reset" href="#">Políticas</a></li>
+          <li><a class="text-reset" href="#">Políticas de Privacidad</a></li>
+          <li><a class="text-reset" href="#">Condiciones de Compra</a></li>
+          <li><a class="text-reset" href="#">Configuraciones de Cookies</a></li>
+          <li><a class="text-reset" href="#">Botón de Arrepentimiento</a></li>
         </ul>
       </div>
     </div>
