--- a/pages/registro.html
+++ b/pages/registro.html
@@ -29,11 +29,11 @@
 </header>
 
 <nav class="container-fluid nav nav-pills flex-column flex-sm-row pages">
-<a class="flex-sm-fill text-sm-center nav-link" href="../index.html">Home</a>
-<a class="flex-sm-fill text-sm-center nav-link" href="camisas.html">Camisas</a>
-<a class="flex-sm-fill text-sm-center nav-link" href="compraropa.html">Último modelo</a>
-<a class="flex-sm-fill text-sm-center nav-link" href="#">Iniciar Sesión</a>
-<a class="flex-sm-fill text-sm-center nav-link" href="ayuda.html">Ayuda</a>
+<a class="flex-sm-fill text-sm-center nav-link text-reset" href="../index.html">Home</a>
+<a class="flex-sm-fill text-sm-center nav-link text-reset" href="camisas.html">Camisas</a>
+<a class="flex-sm-fill text-sm-center nav-link text-reset" href="compraropa.html">Último modelo</a>
+<a class="flex-sm-fill text-sm-center nav-link text-reset" href="#">Iniciar Sesión</a>
+<a class="flex-sm-fill text-sm-center nav-link text-reset" href="ayuda.html">Ayuda</a>
 </nav>
 
 <div class="container-fluid registro">
