terminamos vista mobile

--- a/pages/ayuda.html
+++ b/pages/ayuda.html
@@ -16,7 +16,7 @@
   <header class="container-fluid">
     <div class="row">
       <div class="col-lg-9">
-        <h1><a class="text-reset class="text-reset"" href="../index.html">Mercer</h1></a> 
+        <h1 class="header-mobile"><a class="text-reset" href="../index.html">Mercer</h1></a> 
       </div>
         <nav class="navbar navbar-light bg-light col-lg-3 index">
           <form class="form-inline">
@@ -42,7 +42,7 @@
     <br>
     <br>
             <div class="row">
-            <div class="col d-flex justify-content-around align-content-center">
+            <div class="col d-flex justify-content-around align-content-center ayuda-mobile">
                 <li class="p-2 bd-highlight"><a class="text-reset font-weight-bold" href="#">Comprar en Mercer</a></li>
                 <li class="p-2 bd-highlight"><a class="text-reset font-weight-bold"  href="#">Productos</a></li>
                 <li class="p-2 bd-highlight"><a class="text-reset font-weight-bold"  href="#">Contactenos</a></li>
@@ -54,7 +54,7 @@
       </div> 
 
     <hr>
-    <footer>
+    <footer class="footer-mobile">
     <div class="row">
       <!-- CONTENEDOR 1 -->
       <div class="col-lg-2">
