--- a/pages/registro.html
+++ b/pages/registro.html
@@ -16,7 +16,7 @@
   <header class="container-fluid">
     <div class="row">
       <div class="col-lg-9">
-        <h1><a class="text-reset"  href="../index.html">Mercer</h1></a> 
+        <h1 class="header-mobile"><a class="text-reset"  href="../index.html">Mercer</h1></a> 
       </div>
         <nav class="navbar navbar-light bg-light col-lg-3 index">
           <form class="form-inline">
@@ -38,7 +38,7 @@
 
 <div class="container-fluid registro">
 <div class="row">
-    <div class="col-6">
+    <div class="col-lg-6 col-sm-12 registro-mobile">
       <h5>INICIA SESIÓN</h5>
       <form action="#" method="POST" name="E-MAIL">
       <input class="col-8" type="text" placeholder="E-MAIL"><br>
@@ -50,10 +50,10 @@
           <br>
           <a class="text-reset font-weight-bold" href="ayuda.html">  ¿Olvidaste tu Contraseña?</a>
     </div>
-
-<div class="col-6">
+<br>
+<div class="col-lg-6 col-sm-12 registro-mobile">
                     <h5>REGÍSTRATE</h5>
-                    <small>SÍ AUN NO TIENES UNA CUENTA CREADA EN MERCER.COM.AR
+                    <small class="p-mobile">SÍ AUN NO TIENES UNA CUENTA CREADA EN MERCER.COM.AR
                     UTILIZA ESTE ENLACE PARA COMPLETAR EL FORMULARIO DE REGISTRO.
                     SOLICITAREMOS INFORMACIÓN IMPRESCINDIBLE PARA AGILIZAR 
                     EL PROCESO DE COMPRA.
@@ -67,7 +67,7 @@
       </div>
 
         <hr>
-        <footer>
+        <footer class="footer-mobile">
         <div class="row">
           <!-- CONTENEDOR 1 -->
           <div class="col-lg-2">
