instalamos AOS library

--- a/pages/compraropa.html
+++ b/pages/compraropa.html
@@ -6,6 +6,7 @@
     <meta name="description" content="en Mercer mira el último modelo de la colección primavera-verano en camisas para hombre">
     <meta name="keywords" content="camisas, hombre, new colecction, primavera-verano, modelo,">
     <title>Mercer | Último Modelo </title>   
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -77,7 +78,7 @@
             </div>
             </div>
         </div>
-        <div class="row">
+        <div class="row"  data-aos="zoom-in-down">
             <div class="col">
             <aside class="text-justify-center p-3 m-2 p-mobile">MATERIALES, CUIDADOS Y ORIGEN
             MATERIALES
@@ -106,7 +107,7 @@
             <span aria-hidden="true">&times;</span>
             </button>
         </div>
-        <div class="modal-body p-mobile">  
+        <div class="modal-body p-mobile ">  
             Cuidar de tus prendas es cuidar del medioambiente.
             Los lavados a bajas temperaturas y los programas de centrifugado suaves son más delicados con las prendas, ayudando a mantener el color, la forma y la estructura del tejido.
             Al mismo tiempo, reduce el consumo de energía que se utiliza en los procesos de cuidado.
@@ -158,7 +159,7 @@
         
         <hr>
         <footer class="footer-mobile">
-        <div class="row">
+        <div class="row" data-aos="zoom-out-down">
           <!-- CONTENEDOR 1 -->
           <div class="col-lg-2">
             <ul>
@@ -203,6 +204,10 @@
           </div>
         </div>
       </footer>
+      <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+      <script>
+        AOS.init();
+      </script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
 </body>
