--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="description" content="En Mercer encontraras ropa para hombre en las últimas tendencias de camisas, jeans ,zapatos y ahora nuestra nueva colección de primavera-verano."> 
   <meta name="keywords" content="ropa, jeans, camisas, zapatos, tendencia, talle, marca, shop, online, look, estilo, pratico, primavera-verano, envios, nuevo, new, accesorios, shorts, gorras, remeras y hoodies">
   <title>Proyecto Mercer | Ropa Online</title> 
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
     integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -106,7 +107,7 @@
     
     <hr>
     <footer class="footer-mobile">
-    <div class="row">
+    <div class="row" data-aos="zoom-out-down">
       <!-- CONTENEDOR 1 -->
       <div class="col-lg-2">
         <ul>
@@ -151,7 +152,10 @@
       </div>
     </div>
   </footer>
-
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
     crossorigin="anonymous"></script>
