--- a/pages/ayuda.html
+++ b/pages/ayuda.html
@@ -6,6 +6,7 @@
     <meta name="description" content="Ayuda; comprar en Mercer online, envios, productos, contactenos, programa COVID-19, pagos">
     <meta name="keywords" content="Ayuda, pagos, envios, contactos, covid-19">
     <title>Ayuda | Mercer</title>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -55,7 +56,7 @@
 
     <hr>
     <footer class="footer-mobile">
-    <div class="row">
+    <div class="row" data-aos="zoom-out-down">
       <!-- CONTENEDOR 1 -->
       <div class="col-lg-2">
         <ul>
@@ -99,7 +100,11 @@
         </ul>
       </div>
     </div>
-  </footer>       
+  </footer>   
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>    
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
 </body>
