--- a/pages/camisas.html
+++ b/pages/camisas.html
@@ -6,6 +6,7 @@
     <meta name="description" content="En Mercer online podras encontras las camisas de mayor calidad del mercado, con diseños originales y todos los talles">
     <meta name="keywords" content="camisas, hombre, slim-fit, regular, estructura, denim, rayas, estampadas, eslasticas, básicas, cuadros">
     <title>Camisas Mercer</title>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
         integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -102,7 +103,7 @@
     
     <hr>
     <footer class="footer-mobile">
-    <div class="row">
+    <div class="row " data-aos="zoom-out-down">
       <!-- CONTENEDOR 1 -->
       <div class="col-lg-2">
         <ul>
@@ -147,6 +148,10 @@
       </div>
     </div>
   </footer>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
