terminamos de utilizar la libreria

--- a/pages/ayuda.html
+++ b/pages/ayuda.html
@@ -15,7 +15,7 @@
 </head>
 <body>
   <header class="container-fluid">
-    <div class="row">
+    <div class="row " data-aos="fade-up">
       <div class="col-lg-9">
         <h1 class="header-mobile"><a class="text-reset" href="../index.html">Mercer</h1></a> 
       </div>
@@ -29,7 +29,7 @@
     </div>
 </header>
 
-<nav class="container-fluid nav nav-pills flex-column flex-sm-row pages">
+<nav class="container-fluid nav nav-pills flex-column flex-sm-row pages" data-aos="fade-down">
 <a class="flex-sm-fill text-sm-center nav-link text-reset" href="../index.html">Home</a>
 <a class="flex-sm-fill text-sm-center nav-link text-reset" href="camisas.html">Camisas</a>
 <a class="flex-sm-fill text-sm-center nav-link text-reset" href="compraropa.html">Último modelo</a>
@@ -37,12 +37,12 @@
 <a class="flex-sm-fill text-sm-center nav-link text-reset" href="#">Ayuda</a>
 </nav>
 
-  <div class="ayuda">
+  <div class="ayuda" data-aos="zoom-in-right">
     <h5 class="display-4">Ayuda</h5>
     <br>
     <br>
     <br>
-            <div class="row">
+            <div class="row" data-aos="zoom-in-up">
             <div class="col d-flex justify-content-around align-content-center ayuda-mobile">
                 <li class="p-2 bd-highlight"><a class="text-reset font-weight-bold" href="#">Comprar en Mercer</a></li>
                 <li class="p-2 bd-highlight"><a class="text-reset font-weight-bold"  href="#">Productos</a></li>
