--- a/pages/camisas.html
+++ b/pages/camisas.html
@@ -17,7 +17,7 @@
 <body>
 
   <header class="container-fluid">
-    <div class="row">
+    <div class="row " data-aos="fade-up">
       <div class="col-lg-9">
         <h1 class="header-mobile"><a class="text-reset" href="../index.html">Mercer</h1></a> 
       </div>
@@ -31,7 +31,7 @@
     </div>
 </header>
 
-<nav class="container-fluid nav nav-pills flex-column flex-sm-row pages">
+<nav class="container-fluid nav nav-pills flex-column flex-sm-row pages" data-aos="fade-down">
 <a class="flex-sm-fill text-sm-center nav-link text-reset" href="../index.html">Home</a>
 <a class="flex-sm-fill text-sm-center nav-link text-reset" href="#">Camisas</a>
 <a class="flex-sm-fill text-sm-center nav-link text-reset" href="compraropa.html">Último modelo</a>
@@ -39,7 +39,7 @@
 <a class="flex-sm-fill text-sm-center nav-link text-reset" href="ayuda.html">Ayuda</a>
 </nav>
         
-        <div class="row">
+        <div class="row" data-aos="zoom-out-down">
             <div class="col camisas-hombre ">
                 <h4 class="display-4 camisas-hombre-mobile">CAMISAS PARA HOMBRE</h4>
                 <hr>
@@ -52,7 +52,7 @@
             </div>
         </div>
         
-        <div class="row">
+        <div class="row " data-aos="zoom-out-down">
             <div class="col">
               <a href="#"> <img src="../archivos/img/camisa1.jpg" alt="1" class="camisa-1 shadow-sm p-3 mb-5  rounded image1">
                 <figcaption class="figure-capion text-center text-dark"><strong>CAMISA OXFORD</strong>
