--- a/pages/compraropa.html
+++ b/pages/compraropa.html
@@ -15,7 +15,7 @@
 </head>
 <body>
   <header class="container-fluid">
-    <div class="row">
+    <div class="row " data-aos="fade-up">
       <div class="col-lg-9">
         <h1 class="header-mobile"><a class="text-reset" href="../index.html">Mercer</h1></a> 
       </div>
@@ -29,7 +29,7 @@
     </div>
 </header>
 
-<nav class="container-fluid nav nav-pills flex-column flex-sm-row pages">
+<nav class="container-fluid nav nav-pills flex-column flex-sm-row pages" data-aos="fade-down">
 <a class="flex-sm-fill text-sm-center nav-link text-reset class="text-reset"" href="../index.html">Home</a>
 <a class="flex-sm-fill text-sm-center nav-link text-reset class="text-reset"" href="camisas.html">Camisas</a>
 <a class="flex-sm-fill text-sm-center nav-link text-reset class="text-reset"" href="#">Último modelo</a>
@@ -37,17 +37,19 @@
 <a class="flex-sm-fill text-sm-center nav-link text-reset class="text-reset"" href="ayuda.html">Ayuda</a>
 </nav>
 
+<br>
+<br>
 
-        <div class="row">
+        <div class="row" data-aos="zoom-out-down">
             <div class="col">
-                <h4 class="display-4 camisas-hombre-mobile">CAMISA OXFORD</h4>
+                <h4 class="display-4 camisas-hombre-mobile" >CAMISA OXFORD</h4>
                 <hr>
                     <p class="lead col-12 text-justify p-mobile">
                     CAMISA RELAXED FIT DE CUELLO SOLAPA CON BOTONES Y MANGA LARGA ACABADA EN PUÑO. BOLSILLO PLASTRÓN EN PECHO. CIERRE FRONTAL DE BOTONADURA.
                     </p>
             </div>
         </div>
-        <div class="row">
+        <div class="row" data-aos="zoom-out-down">
             <div class="col">
                 <div class="d-flex justify-content-around">
                 <img src="../archivos/img/camisacompra1.jpg" alt="1" class="w-25 p-2 shadow m-4 bg-light image1">
@@ -78,7 +80,7 @@
             </div>
             </div>
         </div>
-        <div class="row"  data-aos="zoom-in-down">
+        <div class="row">
             <div class="col">
             <aside class="text-justify-center p-3 m-2 p-mobile">MATERIALES, CUIDADOS Y ORIGEN
             MATERIALES
