--- a/pages/registro.html
+++ b/pages/registro.html
@@ -15,7 +15,7 @@
 </head>
 <body>
   <header class="container-fluid">
-    <div class="row">
+    <div class="row " data-aos="fade-up">
       <div class="col-lg-9">
         <h1 class="header-mobile"><a class="text-reset"  href="../index.html">Mercer</h1></a> 
       </div>
@@ -29,7 +29,7 @@
     </div>
 </header>
 
-<nav class="container-fluid nav nav-pills flex-column flex-sm-row pages">
+<nav class="container-fluid nav nav-pills flex-column flex-sm-row pages" data-aos="fade-down">
 <a class="flex-sm-fill text-sm-center nav-link text-reset" href="../index.html">Home</a>
 <a class="flex-sm-fill text-sm-center nav-link text-reset" href="camisas.html">Camisas</a>
 <a class="flex-sm-fill text-sm-center nav-link text-reset" href="compraropa.html">Último modelo</a>
@@ -38,7 +38,7 @@
 </nav>
 
 <div class="container-fluid registro">
-<div class="row">
+<div class="row" data-aos="zoom-in-up">
     <div class="col-lg-6 col-sm-12 registro-mobile">
       <h5>INICIA SESIÓN</h5>
       <form action="#" method="POST" name="E-MAIL">
