--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
 
     <header class="container-fluid">
-        <div class="row">
+        <div class="row" data-aos="fade-up">
           <div class="col-lg-9 col-sm-12 ">
             <h1 class="header-mobile"><a class=" text-reset" href="#">Mercer</h1></a> 
           </div>
@@ -33,7 +33,7 @@
         </div>
     </header>
     
-<nav class="container-fluid nav nav-pills d-flex justify-content-around flex-column flex-sm-row pages">
+<nav class="container-fluid nav nav-pills d-flex justify-content-around flex-column flex-sm-row pages" data-aos="fade-down">
   <li><a class="flex-sm-fill text-sm-center nav-link text-reset" href="#">Home</a></li>
   <li><a class="flex-sm-fill text-sm-center nav-link text-reset" href="/pages/camisas.html">Camisas</a></li>
   <li><a class="flex-sm-fill text-sm-center nav-link text-reset" href="/pages/compraropa.html">Último modelo</a></l>
@@ -73,7 +73,7 @@
     </main>
 
 
-    <section class="row new-collection">
+    <section class="row new-collection" data-aos="flip-right">
       <div class="col-lg-12 col-sm-12 d-flex flex-column justify-content-center align-items-center">
         <h2 class="display-2 leader  new-mobile"><a class="leader" href="/pages/compraropa.html">New Collection </a></h2>
         <figure class="leader2 leader2-mobile"><q>Nueva colección primavera-verano 2022</q></figure>
